--- a/client/drugs.html
+++ b/client/drugs.html
@@ -1,18 +1,16 @@
 <template name="Drugs">
-  <ul>
-    <li><a href="#" class="drug" data-value="methadone">Methadone</a></li>
-    <li><a href="#" class="drug" data-value="buprenorphine">Buprenorphine</a></li>
-    <li><a href="#" class="drug" data-value="naltrexone">Naltrexone</a></li>
+  <!-- Tabs -->
+  <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
+    <a href="#fixed-tab-methadone" class="mdl-layout__tab is-active drug" data-value="methadone">Methadone</a>
+    <a href="#fixed-tab-buprenorphine" class="mdl-layout__tab drug" data-value="buprenorphine">Buprenorphine</a>
+    <a href="#fixed-tab-naltrexone" class="mdl-layout__tab drug" data-value="naltrexone">Naltrexone</a>
+  </div>
 
-    {{#if selection}}
-      {{>Drugs_info drug=selection}}
-    {{/if}}
-  </ul>
+  {{>Drugs_info drug=selection}}
 </template>
 
 <template name="Drugs_info">
-
-<h2>Basic Information</h2>
+<!-- <h2>Basic Information</h2>
 <li><a href="{{drug.source}}" class="external-link">{{capitalize drug.name}}</a></li>
 
   <h2>Side Effects</h2>
@@ -26,6 +24,108 @@
   <ul>
     <li><a href="{{drug.interactionCheckerLink}}" class="external-link">Medscape Interaction Checker</a></li>
     <li>Warning: There are potentially adverse effects of combining with Benzodiazepines (ex. Valium, Xanax), Benzodiazepine Analogs (ex. Clonazolam, Diclazipam), or Barbiturates (ex. Phenobarbital, Amobarbital). These side effects include, but are not limited to, decrease in breathing ability and blood pressure as well as death. Use the above Drug Interaction Checker and ask a qualified health professional before combining.</li>
-  </ul>
+  </ul> -->
 
+  <section class="mdl-layout__tab-panel is-active" id="fixed-tab-{{drug.name}}">
+
+    <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+      <header class="section__play-btn mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--teal-100 mdl-color-text--white">
+        <i class="material-icons">play_circle_filled</i>
+      </header>
+      <div class="mdl-card mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone">
+        <div class="mdl-card__supporting-text">
+          <h4>{{capitalize drug.name}}</h4>
+          {{drug.basicInfo}}
+        </div>
+        <div class="mdl-card__actions">
+          <a href="{{drug.source}}" class="mdl-button">More Info - SAMHSA</a>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- <li><a href="{{drug.interactionCheckerLink}}" class="external-link">Medscape Interaction Checker</a></li>
+    <li>Warning: There are potentially adverse effects of combining with Benzodiazepines (ex. Valium, Xanax), Benzodiazepine Analogs (ex. Clonazolam, Diclazipam), or Barbiturates (ex. Phenobarbital, Amobarbital). These side effects include, but are not limited to, decrease in breathing ability and blood pressure as well as death. Use the above Drug Interaction Checker and ask a qualified health professional before combining.</li> -->
+
+
+    <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+      <div class="mdl-card mdl-cell mdl-cell--12-col">
+        <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing">
+          <h4 class="mdl-cell mdl-cell--12-col">Interactions with Other Drugs</h4>
+          <!-- Benzodiazepines -->
+          <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
+            <div class="section__circle-container__circle mdl-color--primary drug-interaction-samples"
+                 style="background-image: url('https://healthy.kaiserpermanente.org/static/drugency/images/MYN04770.JPG')"
+            ></div>
+          </div>
+          <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+            <h5><i class="material-icons">warning</i> Benzodiazepines</h5>
+            ex. Valium, Xanax
+            <br>
+            Dolore ex deserunt aute fugiat aute nulla ea sunt aliqua nisi cupidatat eu. Duis nulla tempor do aute et eiusmod velit exercitation nostrud quis <a href="#">proident minim</a>.
+          </div>
+          <!-- Benzodiazepine Analogs -->
+          <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
+            <div class="section__circle-container__circle mdl-color--primary drug-interaction-samples"
+                  style="background-image: url('https://41.media.tumblr.com/460fcec641412cf1bea438922b508d17/tumblr_nllg4ozRHZ1unh42oo1_500.jpg')"
+            ></div>
+          </div>
+          <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+            <h5><i class="material-icons">warning</i> Benzodiazepine Analogs</h5>
+            ex. Clonazolam, Diclazipam
+            <br>
+            Dolore ex deserunt aute fugiat aute nulla ea sunt aliqua nisi cupidatat eu. Duis nulla tempor do aute et eiusmod velit exercitation nostrud quis <a href="#">proident minim</a>.
+          </div>
+          <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
+            <div class="section__circle-container__circle mdl-color--primary drug-interaction-samples"
+                 style="background-image: url('http://images.medscape.com/pi/features/drugdirectory/octupdate/QLT51680.jpg')"
+            ></div>
+          </div>
+          <!-- Barbiturates -->
+          <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+            <h5><i class="material-icons">warning</i> Barbiturates</h5>
+            ex. Phenobarbital, Amobarbital
+            <br>
+            Dolore ex deserunt aute fugiat aute nulla ea sunt aliqua nisi cupidatat eu. Duis nulla tempor do aute et eiusmod velit exercitation nostrud quis <a href="#">proident minim</a>.
+          </div>
+        </div>
+        <div class="mdl-card__actions">
+          <a href="{{drug.interactionCheckerLink}}" class="mdl-button">Medscape Interaction Checker for {{drug.name}}</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+      <div class="mdl-card mdl-cell mdl-cell--12-col">
+        <div class="mdl-card__supporting-text">
+          <h4>Side Effects</h4>
+          <ul class="toc">
+             <h4>Resources</h4>
+             {{#each sideEffect in drug.sideEffects}}
+               <a href="{{sideEffect.link}}">{{sideEffect.title}}</a>
+            {{/each}}
+           </ul>
+        </div>
+        <div class="mdl-card__actions">
+          <a href="#" class="mdl-button">Read our features</a>
+        </div>
+      </div>
+    </section>
+    <section class="section--footer mdl-color--white mdl-grid">
+      <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
+        <div class="section__circle-container__circle mdl-color--accent section__circle--big"></div>
+      </div>
+      <div class="section__text mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+        <h5>Lorem ipsum dolor sit amet</h5>
+        Qui sint ut et qui nisi cupidatat. Reprehenderit nostrud proident officia exercitation anim et pariatur ex.
+      </div>
+      <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
+        <div class="section__circle-container__circle mdl-color--accent section__circle--big"></div>
+      </div>
+      <div class="section__text mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+        <h5>Lorem ipsum dolor sit amet</h5>
+        Qui sint ut et qui nisi cupidatat. Reprehenderit nostrud proident officia exercitation anim et pariatur ex.
+      </div>
+    </section>
+  </section>
 </template>
