--- a/client/drugs.html
+++ b/client/drugs.html
@@ -10,26 +10,13 @@
 </template>
 
 <template name="Drugs_info">
-<!-- <h2>Basic Information</h2>
-<li><a href="{{drug.source}}" class="external-link">{{capitalize drug.name}}</a></li>
-
-  <h2>Side Effects</h2>
-  <ul>
-    <li><a href="{{drug.sideEffectsListLink}}" class="external-link">Common Side Effects</a></li>
-    <li><a href="{{drug.sideEffectMgmtLink}}" class="external-link">Side Effect Management</a></li>
-  </ul>
-
-
-  <h2>Interactions with other Drugs</h2>
-  <ul>
-    <li><a href="{{drug.interactionCheckerLink}}" class="external-link">Medscape Interaction Checker</a></li>
-    <li>Warning: There are potentially adverse effects of combining with Benzodiazepines (ex. Valium, Xanax), Benzodiazepine Analogs (ex. Clonazolam, Diclazipam), or Barbiturates (ex. Phenobarbital, Amobarbital). These side effects include, but are not limited to, decrease in breathing ability and blood pressure as well as death. Use the above Drug Interaction Checker and ask a qualified health professional before combining.</li>
-  </ul> -->
 
   <section class="mdl-layout__tab-panel is-active" id="fixed-tab-{{drug.name}}">
 
+    <!-- INFO -->
     <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
-      <header class="section__play-btn mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--teal-100 mdl-color-text--white">
+      <header class="section__play-btn mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--teal-100 mdl-color-text--white"
+              style="background-image:url('pillbox-{{drug.name}}.jpg');background-size:contain">
         <i class="material-icons">play_circle_filled</i>
       </header>
       <div class="mdl-card mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone">
@@ -44,57 +31,7 @@
     </section>
 
 
-    <!-- <li><a href="{{drug.interactionCheckerLink}}" class="external-link">Medscape Interaction Checker</a></li>
-    <li>Warning: There are potentially adverse effects of combining with Benzodiazepines (ex. Valium, Xanax), Benzodiazepine Analogs (ex. Clonazolam, Diclazipam), or Barbiturates (ex. Phenobarbital, Amobarbital). These side effects include, but are not limited to, decrease in breathing ability and blood pressure as well as death. Use the above Drug Interaction Checker and ask a qualified health professional before combining.</li> -->
-
-
-    <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
-      <div class="mdl-card mdl-cell mdl-cell--12-col">
-        <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing">
-          <h4 class="mdl-cell mdl-cell--12-col">Interactions with Other Drugs</h4>
-          <!-- Benzodiazepines -->
-          <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
-            <div class="section__circle-container__circle mdl-color--primary drug-interaction-samples"
-                 style="background-image: url('https://healthy.kaiserpermanente.org/static/drugency/images/MYN04770.JPG')"
-            ></div>
-          </div>
-          <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
-            <h5><i class="material-icons">warning</i> Benzodiazepines</h5>
-            ex. Valium, Xanax
-            <br>
-            Dolore ex deserunt aute fugiat aute nulla ea sunt aliqua nisi cupidatat eu. Duis nulla tempor do aute et eiusmod velit exercitation nostrud quis <a href="#">proident minim</a>.
-          </div>
-          <!-- Benzodiazepine Analogs -->
-          <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
-            <div class="section__circle-container__circle mdl-color--primary drug-interaction-samples"
-                  style="background-image: url('https://41.media.tumblr.com/460fcec641412cf1bea438922b508d17/tumblr_nllg4ozRHZ1unh42oo1_500.jpg')"
-            ></div>
-          </div>
-          <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
-            <h5><i class="material-icons">warning</i> Benzodiazepine Analogs</h5>
-            ex. Clonazolam, Diclazipam
-            <br>
-            Dolore ex deserunt aute fugiat aute nulla ea sunt aliqua nisi cupidatat eu. Duis nulla tempor do aute et eiusmod velit exercitation nostrud quis <a href="#">proident minim</a>.
-          </div>
-          <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
-            <div class="section__circle-container__circle mdl-color--primary drug-interaction-samples"
-                 style="background-image: url('http://images.medscape.com/pi/features/drugdirectory/octupdate/QLT51680.jpg')"
-            ></div>
-          </div>
-          <!-- Barbiturates -->
-          <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
-            <h5><i class="material-icons">warning</i> Barbiturates</h5>
-            ex. Phenobarbital, Amobarbital
-            <br>
-            Dolore ex deserunt aute fugiat aute nulla ea sunt aliqua nisi cupidatat eu. Duis nulla tempor do aute et eiusmod velit exercitation nostrud quis <a href="#">proident minim</a>.
-          </div>
-        </div>
-        <div class="mdl-card__actions">
-          <a href="{{drug.interactionCheckerLink}}" class="mdl-button">Medscape Interaction Checker for {{drug.name}}</a>
-        </div>
-      </div>
-    </section>
-
+    <!-- SIDE EFFECTS -->
     <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
       <div class="mdl-card mdl-cell mdl-cell--12-col">
         <div class="mdl-card__supporting-text">
@@ -102,42 +39,65 @@
           <ul class="toc">
              <h4>Resources</h4>
              {{#each sideEffect in drug.sideEffects}}
-               <a href="{{sideEffect.link}}">{{sideEffect.title}}</a>
+               <a href="{{sideEffect.link}}" target="_blank">{{sideEffect.title}}</a>
             {{/each}}
            </ul>
         </div>
-        <div class="mdl-card__actions">
-          <a href="#" class="mdl-button">Read our features</a>
-        </div>
-      </div>
-    </section>
-    <section class="section--footer mdl-color--white mdl-grid">
-      <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
-        <div class="section__circle-container__circle mdl-color--accent section__circle--big"></div>
-      </div>
-      <div class="section__text mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
-        <h5>Lorem ipsum dolor sit amet</h5>
-        Qui sint ut et qui nisi cupidatat. Reprehenderit nostrud proident officia exercitation anim et pariatur ex.
-      </div>
-      <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
-        <div class="section__circle-container__circle mdl-color--accent section__circle--big"></div>
-      </div>
-      <div class="section__text mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
-        <h5>Lorem ipsum dolor sit amet</h5>
-        Qui sint ut et qui nisi cupidatat. Reprehenderit nostrud proident officia exercitation anim et pariatur ex.
       </div>
     </section>
 
-    <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
-      <div class="mdl-card mdl-cell mdl-cell--12-col">
-        <div class="mdl-card__supporting-text">
-          <h4>Success Stories</h4>
-          Dolore ex deserunt aute fugiat aute nulla ea sunt aliqua nisi cupidatat eu. Nostrud in laboris labore nisi amet do dolor eu fugiat consectetur elit cillum esse. Pariatur occaecat nisi laboris tempor laboris eiusmod qui id Lorem esse commodo in. Exercitation aute dolore deserunt culpa consequat elit labore incididunt elit anim.
+    <!-- OTHER DRUGS -->
+    <section class="section--center mdl-grid">
+      <div class="mdl-card mdl-cell mdl-cell--6-col mdl-shadow--2dp">
+        <div id="goodrx_low-price_widget"> </div>
+        <div class="mdl-card__actions mdl-card--border">
+          <a href="http://www.goodrx.com/{{drug.name}}" target="_blank" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+            GoodRX - #1 medical app for iOS and Android
+          </a>
         </div>
-        <div class="mdl-card__actions">
-          <a href="#" class="mdl-button">Read our features</a>
+      </div>
+      <div class="mdl-card mdl-cell mdl-cell--6-col mdl-shadow--2dp">
+        <div class="mdl-card__title">
+          <h2 class="mdl-card__title-text">Interactions with other Drugs</h2>
+        </div>
+        <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing">
+          <i class="material-icons">warning</i>WARNING
+          <br>
+          Benzodiazepines (Valium, Xanax) | Benzodiazepine Analogs (Clonazolam, Diclazipam) | Barbiturates (Phenobarbital, Amobarbital)
+          <br>
+          There are potentially adverse effects of these combinations.
+          These side effects include, but are not limited to, decrease in breathing ability and blood pressure as well as death.
+          Use a <a href="{{drug.interactionCheckerLink}}" target="_blank">Drug Interaction Checker</a> and ask a qualified health professional before using.
+        </div>
+        <div id="medscape-interaction-checker" class="mdl-card__actions">
+          <!-- <a href="{{drug.interactionCheckerLink}}" target="_blank" class="mdl-button">Medscape Interaction Checker for {{drug.name}}</a> -->
+          <a href="http://www.webmd.com/my-medicine/default.htm#add/{{drug.webMdChecker}}/current/" target="_blank" class="mdl-button">WebMD Medication Checker</a>
         </div>
       </div>
     </section>
+
+    <!-- RECOVERY STORIES -->
+    <section id="drug-interaction-checker" class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+      <div class="mdl-card mdl-cell mdl-cell--12-col">
+        <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing">
+          <h4 class="mdl-cell mdl-cell--12-col">Recovery Stories</h4>
+          {{#each story in drug.successStories}}
+            <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
+              <div class="section__circle-container__circle mdl-color--primary drug-interaction-samples"
+                   style="background-image: url('https://randomuser.me/api/portraits/{{story.image}}')"
+              ></div>
+            </div>
+            <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+              <h5>{{story.name}}</h5>
+              {{story.text}}
+            </div>
+          {{/each}}
+        </div>
+        <div id="medscape-interaction-checker" class="mdl-card__actions">
+          <a href="{{drug.successStoriesLink}}" target="_blank" class="mdl-button">Read More</a>
+        </div>
+      </div>
+    </section>
+
   </section>
 </template>
