--- a/client/drugs.html
+++ b/client/drugs.html
@@ -12,12 +12,12 @@
 
 <template name="Drugs_info">
 
-  <div class="mdl-tabs__panel is-active" id="fixed-tab-{{drug.name}}">
+  <div class="mdl-tabs__panel is-active fixed-tab-content" id="fixed-tab-{{drug.name}}">
 
     <!-- INFO -->
     <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
       <header class="section__play-btn mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--teal-100 mdl-color-text--white"
-              style="background-image:url('pillbox-{{drug.name}}.jpg');background-size:contain">
+              style="background-image:url('images/pillbox-{{drug.name}}.jpg');background-size:contain">
         <i class="material-icons">play_circle_filled</i>
       </header>
       <div class="mdl-card mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone">
