--- a/client/drugs.html
+++ b/client/drugs.html
@@ -1,4 +1,5 @@
 <template name="Drugs">
+
   <!-- Tabs -->
   <div class="mdl-tabs">
     <div class="mdl-tabs__tab-bar">
@@ -6,7 +7,12 @@
       <a href="#fixed-tab-buprenorphine" class="mdl-tabs__tab drug" data-value="buprenorphine">Buprenorphine</a>
       <a href="#fixed-tab-naltrexone" class="mdl-tabs__tab drug" data-value="naltrexone">Naltrexone</a>
     </div>
-    {{>Drugs_info drug=selection}}
+
+    <div class="mdl-grid">
+      <div class="mdl-cell mdl-cell--12-col">
+        {{>Drugs_info drug=selection}}
+      </div>
+    </div>
   </div>
 </template>
 
